fix overflow for firefox

--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -23,7 +23,7 @@ section {
     border: 1px red solid;
     background-color: #77a0b7;
     margin: 10px;
-    height: 220px; 
+    height: 240px; 
 }
 
 .section-title {
